--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -160,7 +160,6 @@
 			<a href="https://irony-machine.neocities.org/" target="_blank"><img src="!g/irony-machine.png"></a>
 			<a title="layfarts" href="https://layfarts.com" target="_blank"><img src="!g/layfarts.gif" alt="layfarts"></a>
 			<a title="sylum" href="https://sylum.web.fc2.com/" target="_blank"><img src="!g/sylum.gif" alt="sylum"></a>
-			<a title="vagabondage" href="https://vagabond.sh" target="_blank"><img src="!g/vagabondage.gif"></a>
 			<a title="audreywasadiver" href="https://audreywasadiver.neocities.org/" target="_blank"><img src="!g/audreywasadiver.gif" alt="audreywasadriver"></a>
 			<a title="myblace" href="https://myblace.one" target="_blank"><img src="!g/myblace.gif" alt="myblace"></a>
 			<a href="https://alphacentauri.neocities.org/" title="alphacentauri" target="_blank"><img src="!g/alphacentauri.gif" alt="alphacentauri"></a>
@@ -178,12 +177,13 @@
 			<a title="caitsith" href="https://caitsith.neocities.org" target="_blank"><img src="!g/caitsith.gif" alt="caitsith"></a>
 			<a title="ribo.zone" href="https://ribo.zone/" target="_blank"><img src="!g/ribose.gif" alt="ribo.zone"></a>
 			<a title="kaftofi" href="https://sea-of-colors.neocities.org/" target="_blank"><img src="!g/sea-of-colors.gif" alt="sea of colors"></a>
-			<a title="poemdoll" href="https://poemdoll.neocities.org"><img src="!g/poemdoll.png" alt="poemdoll"></a>
+			<a title="poemdoll" href="https://poemdoll.neocities.org" target="_blank"><img src="!g/poemdoll.png" alt="poemdoll"></a>
 			<a href="https://snewberry.neocities.org"><img style="image-rendering: pixelated" src="https://snewberry.neocities.org/snewbutton.gif" alt="Snewberry Button"></a>
 			<a title="lexi" href="https://lexiqqq.com/" target="_blank"><img src="https://www.lexiqqq.com/assets/img/button_4.gif" alt="lexi"></a>
 			<a title="sweetlolita" href="https://sweetlolita.neocities.org" target="_blank"><img src="!g/sweetlolita.gif" alt="sweetlolita"></a>
 			<a title=" vulpix" href="https://ocha.cafe" target="_blank"><img src="!g/ocha.cafe.png" alt="ocha.cafe"></a>
 			<a title="alpawca" href="https://alpawca.neocities.org" target="_blank"><img src="!g/alpawca.gif" alt="alpawca"></a>
+			<a title="neet" href="https://fujoshi.nekoweb.org" target="_blank"><img src="!g/neetretreat.png" alt="neet retreat"></a>
 		</div>
 
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
@@ -191,11 +191,8 @@
 			<a href="https://dogsprite.neocities.org/" target="_blank">dogsprite</a> /
 			<a href="https://pelagiczones.neocities.org/" target="_blank">pelagiczones</a> /
 			<a href="https://bubbly.neocities.org/" target="_blank">bubbly</a> /
-			<a href="https://gougou772.neocities.org/" target="_blank">gougou772</a> /
-			<a href="https://vickee.neocities.org" target="_blank">vickee</a> /
 			<a title="one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/">2cherrish</a> /
 			<a href="https://yaebee.neocities.org/" target="_blank">yaebee</a> /
-			<a href="https://glassheart.neocities.org" target="_blank">glassheart</a> /
 			<a href="https://cyclopamine.neocities.org/" target="_blank">cyclopamine</a> /
 			<a href="https://maphren.neocities.org/" target="_blank">maphren</a>
 		</p>
@@ -225,7 +222,6 @@
 			<a href="https://melokaji.neocities.org/"><img src="https://melokaji.neocities.org/images/melobutton.gif" alt="melokaji"></a>
 			<a target="_blank" href="https://slashdiv.neocities.org"><img src="https://i.postimg.cc/0QcYFnHv/8831.gif" height="31" width="88"></a>
 			<a href="https://inaka.moe" target="_blank"><img src="!g/inaka.moe.gif"></a>
-			<a href="https://panaceas.neocities.org" target="_blank"><img src="!g/panaceas.png"></a>
 			<a href="https://kikki.neocities.org" target="_blank"><img src="!g/kikki.gif"></a>
 			<a href="https://hydrangeagarden.neocities.org" target="_blank"><img src="!g/hydrangeagarden.gif"></a>
 			<a href="https://voyager.neocities.org" target="_blank"><img src="!g/voyager.png"></a>
@@ -267,9 +263,9 @@
 			<a href="https://maria.town" target="_blank"><img src="!g/maria.town.png" alt="maria.town"></a>
 			<a href="https://avas.space/" target="_blank"><img src="https://ava.nekoweb.org/buttons/buttongif.gif"></a>
 			<a title="fruitgummie" href="https://fruitgummie.neocities.org/" target="_blank"><img src="!g/fruitgummie.gif" alt="fruitgummie"></a>
-			<a title="so colorful and wonderful" href="https://syntheticfruits,neocities.org" target="_blank"><img src="!g/syntheticfruits.gif" alt="syntheticfruits"></a>
+			<a title="so colorful and wonderful" href="https://syntheticfruits.neocities.org" target="_blank"><img src="!g/syntheticfruits.gif" alt="syntheticfruits"></a>
 			<a title="vexcharm" href="https://vexcharm.net" target="_blank"><img src="!g/vexcharm.net.gif" alt="vexcharm"></a>
-			<a title="bleu" href="https://bleu.nekoweb.org/" target="_blank"> <img src="https://files.catbox.moe/ofivcj.gif" /> </a>
+			<a title="bleu" href="https://bleu.nekoweb.org/" target="_blank"> <img src="https://files.catbox.moe/ofivcj.gif" /></a>
 			<a title="crisis.city" href="https://crisis.city" target="_blank"><img src="!g/crisis.city.gif" alt="crisis.city"></a>
 		</div>
 
@@ -357,7 +353,7 @@
 			<a title="status cafe - microblog site" href="https://status.cafe" target="_blank"><img src="https://status.cafe/assets/button.png" alt="Status Cafe" /></a>
 			<a title="melonland.net forum" href="https://forum.melonland.net" target="_blank"><img src="!g/MELONLAND-FORUM.gif"></a>
 			<a title="32.bit cafe" href="https://www.32bit.cafe/" target="_blank"><img src="!g/32bit-cafe.png" alt="32.bit cafe"></a>
-			<a href="https://nekoweb.org/" target="_blank"><img src="https://nekoweb.org/assets/buttons/button4.gif" alt="nekoweb"></a>
+			<a href="https://nekoweb.org/" target="_blank"><img src="!g/nekoweb-mimi.gif" alt="nekoweb"></a>
 			<a title="silly.city webring" href="https://silly.city" target="_blank"><img src="!g/silly.city.gif" alt="silly city"></a>
 		</div>
 
@@ -385,7 +381,13 @@
 			<a title="finn - i love their /cats page the most!" href="https://snowenti.neocities.org" target="_blank"><img src="!g/snowenti.gif"></a>
 			<a title="r0b1n666 - cool art!" href="https://r0b1n666.neocities.org" target="_blank"><img src="!g/r0b1n666.gif"></a>
 			<a title="jude - love the video game pages!! very creative way of logging them :)" href="https://blackwater.neocities.org/" target="_blank"><img src="https://blackwater.neocities.org/img/banner2.gif"></a>
+			<a href="https://panaceas.neocities.org" target="_blank"><img src="!g/panaceas.png"></a>
+			<a title="vagabondage" href="https://vagabond.sh" target="_blank"><img src="!g/vagabondage.gif"></a>
 		</div>
+
+		<p><a href="https://gougou772.neocities.org/" target="_blank">gougou772</a> /
+			<a href="https://glassheart.neocities.org" target="_blank">glassheart</a>
+		</p>
 
 		<!--box1 end wrapper end div-->
 	</div>
@@ -393,7 +395,7 @@
 	<div id="c" class="box">
 		page made with materials by <a href="http://sozaiya405.chu.jp/" target="_blank">sozaiya 405</a>
 		<br>
-		<a href="/home">go back home</a> / <a href="/sitemap">sitemap</a>
+		<a href="/home">home</a> / <a href="/sitemap">sitemap</a>
 	</div>
 
 	<div class="footer"></div>
