--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -53,6 +53,7 @@
 		<h3>change log</h3>
 
 		<div id="log">
+			<li>24.may.24: log: <a href="fallout-new-vegas/index.html">new vegas</a></li>
 			<li>22.may.24 - log: <a href="fallout-new-vegas/index.html">new vegas</a> + <small>from now on i'm gonna start logs from newest to oldest!</small></li>
 			<li>20.may.24 - log: <a href="fallout-1/index.html">fallout</a></li>
 			<li>17.apr.24 - log: <a href="fallout-1/index.html">fallout</a></li>
