--- a/doqmeat/home.html
+++ b/doqmeat/home.html
@@ -133,6 +133,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>26.may.24: journal log: <a href="/journal">portable CD player</a></li>
 			<li>22.may.24: <a href="/vgs/fallout-new-vegas/index.html">new vegas</a> log</li>
 			<li>21.may.24: created <a title="I JUST FOUND OUT 123guestbook is closing" href="/guestbook">guestbook</a> page!</li>
 			<li>20.may.24: journal log: <a href="/journal">free from uni</a> +<a title="i finished it!" href="/vgs/fallout-1">fallout</a> log</li>
