--- a/doqmeat/home.html
+++ b/doqmeat/home.html
@@ -126,8 +126,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<p><span class="hl">reading:</span> <i>the guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki fujimoto</p>
 			<p><span class="hl">watching:</span> dungeon meshi, twin peaks S2</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> <a href="/projects/learning-js/index.html">learning JS</a></p>
-			<p><span class="hl">coding/writing:</span> <a href="https://siinamota.doqmeat.com" target="_blank">siinamota fansite</a></p>
+			<p><span class="hl">working on:</span> <a href="/projects/learning-js/index.html">learning JS</a>, building <a href="https://siinamota.doqmeat.com" target="_blank">siinamota fansite</a></p>
+			<p><span class="hl">coding/writing:</span> some blog posts</p>
 			<p class="date">last updated on 20.may.24</p>
 		</div>
 
