--- a/doqmeat/vgs/fallout-new-vegas/index.html
+++ b/doqmeat/vgs/fallout-new-vegas/index.html
@@ -34,6 +34,9 @@
 		<div class="info"><b>genre/type: </b> shooter, rpg, action </div>
 		<div class="info"><b>status:</b> not finished</div>
 		<h3>logs</h3>
+		<p><span class="date">27.may.24</span> i go north of goodsprings and got my ass beat by cazadores.... i went back and decided to take a selfie with the dog instead.</p>
+		<center><img src="me-n-chey.jpg" width="100%" alt="me and chey"></center>
+		<hr>
 		<p><span class="date">24.may.24</span> i think i am pretty much done with goodsprings! got through that fight with the powder gangers <small>(btw i feel like gangers is impossible for me to say irl)</small> and the ppl of goodsprings. helped goodsprings of course because like i don't have have it in me to be evil. and also a dog lives in goodsprings and her name is cheyenne. i remember in my first playthrough of new vegas, when i got into this fight idk What happened but my ass was a bit rusty and the dog fucking died and i felt soooooo bad. i couldn't even reload because it had been a while since i had saved the game <small>(i learned from this one)</small> so she had to stay dead <img src="/!g/pix/catsob.gif"></p>
 		<p><b>until today!</b> i did this quest again, sniped the guys. and the dog? is very much alive. <b>fuck yes.</b></p>
 		<p>one of the first perks i chose in the game was the <i>wild wasteland</i>. i think i have encounter at least 2 of these random encounters.</p>
@@ -41,7 +44,7 @@
 		<img src="may24%20(3).jpg" width="100%">
 		<p>the first one was this fridge with a skeleton and a hat. <s>but the weird thing is that when i equip the hat it looks totally different on my character? it has feathers??</s> oh my bad, i just googled this and this is just what it shows for female models KJDFLFDKSJ. moving on.</p>
 		<img src="may24%20(2).jpg" width="100%">
-		<p>i also found this thing. and below the clift there was a corpse with a pretty cool outfit tbh. also fuck that <span class="spoiler">bitch barton whatever for making me go and look for his missing daughter and wasting my damn time. i killed you with a knife.</p>
+		<p>i also found this thing. and below the clift there was a corpse with a pretty cool outfit tbh. also fuck that <span class="spoiler">bitch barton whatever for making me go and look for his missing daughter and wasting my damn time. i killed you with a knife.</span></p>
 		<p>i think next time i boot up the game i will goooooooo to the north of goodsprings and do some progress on my main quest. but anyways, it feels good to be playing this game again :)</p>
 		<hr>
 		<p><span class="date">22.may.24</span> told myself i would start a new save file as soon as i finished playing <a href="/vgs/fallout-1/index.html">fallout</a> and here we are. we are so back.</p>
