--- a/doqmeat/vgs/fallout-new-vegas/index.html
+++ b/doqmeat/vgs/fallout-new-vegas/index.html
@@ -36,6 +36,7 @@
 		<h3>logs</h3>
 		<p><span class="date">27.may.24</span> i go north of goodsprings and got my ass beat by cazadores.... i went back and decided to take a selfie with the dog instead.</p>
 		<center><img src="me-n-chey.jpg" width="100%" alt="me and chey"></center>
+<p>after i said goodbye to the dog, i went south and helped out the ppl at prim. i will be turning that robot into a sheriff.</p>
 		<hr>
 		<p><span class="date">24.may.24</span> i think i am pretty much done with goodsprings! got through that fight with the powder gangers <small>(btw i feel like gangers is impossible for me to say irl)</small> and the ppl of goodsprings. helped goodsprings of course because like i don't have have it in me to be evil. and also a dog lives in goodsprings and her name is cheyenne. i remember in my first playthrough of new vegas, when i got into this fight idk What happened but my ass was a bit rusty and the dog fucking died and i felt soooooo bad. i couldn't even reload because it had been a while since i had saved the game <small>(i learned from this one)</small> so she had to stay dead <img src="/!g/pix/catsob.gif"></p>
 		<p><b>until today!</b> i did this quest again, sniped the guys. and the dog? is very much alive. <b>fuck yes.</b></p>
