--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -11,7 +11,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>☆ doqmeat ☆</title>
+	<title>☆ doqmeat.com ☆</title>
 	<meta name="description" content="des' personal website">
 	<link rel="icon" type="image/x-icon" href="favicon.gif">
 	<!--	CSS -->
