--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -11,7 +11,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>☆ doqmeat.com ☆</title>
+	<title>☆ doqmeat's website ☆</title>
 	<meta name="description" content="des' personal website">
 	<link rel="icon" type="image/x-icon" href="favicon.gif">
 	<!--	CSS -->
@@ -184,11 +184,11 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h2>currently...</h2>
 			<p><span class="hl">playing:</span> <a href="/vgs/fallout-new-vegas/index.html">fallout: new vegas</a>, <a href="/vgs/paranormasight">paranormasight</a></p>
 			<p><span class="hl">reading:</span> <i>the guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki fujimoto</p>
-			<p><span class="hl">watching:</span> dungeon meshi, twin peaks S2</p>
+			<p><span class="hl">watching:</span> dungeon meshi</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> <a href="/projects/learning-js/index.html">learning JS</a>, building <a href="https://siinamota.doqmeat.com" target="_blank">siinamota fansite</a></p>
-			<p><span class="hl">coding/writing:</span> some blog posts</p>
-			<p class="date">last updated on 20.may.24</p>
+			<p><span class="hl">working on:</span> building a <a href="https://siinamota.doqmeat.com/fanlisting" target="_blank">siinamota fanlisting</a></p>
+			<p><span class="hl">coding/writing:</span> nothing atm</p>
+			<p class="date">last updated on 30.may.24</p>
 		</div>
 
 		<div id="updates" class="box">
