minor fix to guestbook

--- a/doqmeat/guestbook/index.html
+++ b/doqmeat/guestbook/index.html
@@ -27,7 +27,7 @@
 		</center>
 
 		<div id="guestbook">
-			<button onclick="togglePopUp()" class="deco"><img title="click me!" src="https://doqmeat.com/!g/deco/tora-cat%20(2).gif"></button>
+			<button onclick="togglePopUp()" class="deco"><img title="click me!" src="/!g/deco/tora-cat%20(2).gif"></button>
 			<div id="c_widget">
 			</div>
 			<script src="comment-widget.js"></script>
