--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -89,6 +89,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 </head>
 
 <body>
+	<!-- nekoooo
 	<script>
 		NekoType = "black"
 
@@ -96,6 +97,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 	<h1 id=nl>
 		<script src="https://webneko.net/n20171213.js"></script><a href="https://webneko.net">Neko</a>
 	</h1>
+-->
 
 	<div id="wrapper">
 
@@ -108,6 +110,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h2>pick a theme!</h2>
 			<button onclick="toggleTheme('/!f/homepage-v3/flower.css')">flower</button>
 			<button onclick="toggleTheme('/!f/homepage-v3/space.css')">space</button>
+			<!--			<button onclick="toggleTheme('/!f/homepage-v3/madoka.css')">madoka</button>-->
 		</div>
 
 		<nav id="nav" class="box">
@@ -135,7 +138,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a href="/sites"><img src="/!g/pix/favcharas.gif"> button wall</a>
 			<a title="contains links, resources, F2U stuff, archives, etc!" href="/notebook"><img src="/!g/pix/notebook.gif"> notebook</a>
 			<a href="/guestbook"><img src="/!g/pix/bear-inside-mail.gif"> guestbook <img src="/!g/pix/new1.gif"></a>
-			<a href="https://my.cbox.ws/doqmeat" target="_blank" class="outlink"><img src="/!g/pix/msgbbl.gif"> chatbox</a>
+			<button title="chatbox will open in a tiny window!" onclick="chat()" class="no"><img src="/!g/pix/msgbbl.gif"> chatbox</button>
 			<a href="/sitemap"><img src="/!g/pix/world.gif"> sitemap</a>
 
 			<h3>offsite</h3>
@@ -338,16 +341,6 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a title="plushies collection... take me there!" href="/collection/plushies/index.html"><img src="!g/plushies.jpg" alt="featured page"></a>
 		</div>
 
-		<div id="widget" class="box">
-
-			you are visitor number...
-			<script language="javascript" type="text/javascript" src="//counter1.fc2.com/counter.php?id=39059397&main=1"></script><noscript><img src="//counter1.fc2.com/counter_img.php?id=39059397&main=1" /></noscript>
-
-			<br>
-			<a href="//clap.fc2.com/post/doqmeat/?url=https%3A%2F%2Fdoqmeat.neocities.org%2F&title=doqmeat%27s+site" target="_blank" title="enjoy my site? give it a clap!"><img src="//clap.fc2.com/images/button/orange/doqmeat?url=https%3A%2F%2Fdoqmeat.neocities.org%2F&amp;lang=en" alt="Web Clap by FC2" style="border:none;border-radius:10px;" /></a>
-
-		</div>
-
 		<div id="button" class="box">
 			<h2>link me!</h2>
 			<p>and remember to <a class="outlink" href="https://awesomelytechie.com/dont-hotlink/" target="_blank">not hotlink</a></p>
@@ -357,8 +350,19 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		</div>
 
 		<div id="chatbox">
-			<h2>chatbox</h2>
-			<iframe src="https://www3.cbox.ws/box/?boxid=3527348&boxtag=lFAd4a" width="100%" height="100%" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>
+			<div id="chatboxheader">
+				<h2><img src="/!g/pix/msg.gif" class="no"> chatbox</h2>
+				<button title="close chatbox" onclick="chat()" class="no">x</button>
+			</div>
+			<iframe src="https://www3.cbox.ws/box/?boxid=3527348&boxtag=lFAd4a" width="100%" height="85%" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>
+		</div>
+
+		<div id="widget" class="box">
+			you are visitor number...
+			<script language="javascript" type="text/javascript" src="//counter1.fc2.com/counter.php?id=39059397&main=1"></script><noscript><img src="//counter1.fc2.com/counter_img.php?id=39059397&main=1" /></noscript>
+
+			<br>
+			<a href="//clap.fc2.com/post/doqmeat/?url=https%3A%2F%2Fdoqmeat.neocities.org%2F&title=doqmeat%27s+site" target="_blank" title="enjoy my site? give it a clap!"><img src="//clap.fc2.com/images/button/orange/doqmeat?url=https%3A%2F%2Fdoqmeat.neocities.org%2F&amp;lang=en" alt="Web Clap by FC2" style="border:none;border-radius:10px;" /></a>
 		</div>
 
 		<div id="cat" class="box">
@@ -395,7 +399,6 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		<img id="sticker27" class="deco" alt="">
 		<img id="sticker28" class="deco" alt="">
 		<img id="fixed-1" alt="">
-		<img id="fixed-2" alt="">
 		<!--		wrapper end div-->
 	</div>
 
@@ -449,6 +452,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 	<script src="!f/css-picker.js"></script>
 	<script src="!f/music-toggle.js"></script>
 	<script src="!f/homepage-v3/mccatdrag.js"></script>
+	<script src="!f/homepage-v3/chatbox.js"></script>
 </body>
 
 </html>
