siinamota fanlisting buttons

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -189,9 +189,9 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<p><span class="hl">reading:</span> <i>the guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki fujimoto</p>
 			<p><span class="hl">watching:</span> dungeon meshi</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> building a <a href="https://siinamota.doqmeat.com/fanlisting" target="_blank">siinamota fanlisting</a></p>
+			<p><span class="hl">working on:</span> building a <a href="https://siinamota.doqmeat.com/fanlisting" target="_blank">siinamota fanlisting</a> and fansite!</p>
 			<p><span class="hl">coding/writing:</span> nothing atm</p>
-			<p class="date">last updated on 30.may.24</p>
+			<p class="date">last updated on 31.may.24</p>
 		</div>
 
 		<div id="updates" class="box">
@@ -216,6 +216,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="listing" class="box">
 			<h2>fanlistings &amp; cliques</h2>
+
+			<a href="https://siinamota.doqmeat.com/fanlisting" target="_blank"><img src="!g/web/fanlisting-cliques/siinamota-small.png" alt="siinamota fanlisting"></a>
 
 			<a href="https://www.marheavenj.net/power" target="_blank"><img src="!g/web/fanlisting-cliques/power.jpg" alt="power fanlisting"></a>
 
@@ -245,6 +247,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a href="https://allyratworld.com/cafe/rose" target="_blank"><img src="/!g/web/fanlisting-cliques/88x31kuromi.png" alt="cafe rose banner"></a>
 
 			<br>
+			<a href="https://siinamota.doqmeat.com/fanlisting" target="_blank"><img src="!g/web/fanlisting-cliques/siinamota-big.png" style="max-width: 100%" alt="siinamota fanlisting"></a>
 			<a href="https://mizuki.world/nso/" target="_blank"><img src="/!g/web/fanlisting-cliques/nso.png" alt="needy streamer overdose fanlisting" style="max-width:100%"></a>
 
 			<br>
