added some links n sites

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -267,11 +267,12 @@
 			<a title="vexcharm" href="https://vexcharm.net" target="_blank"><img src="!g/vexcharm.net.gif" alt="vexcharm"></a>
 			<a title="bleu" href="https://bleu.nekoweb.org/" target="_blank"> <img src="https://files.catbox.moe/ofivcj.gif" /></a>
 			<a title="crisis.city" href="https://crisis.city" target="_blank"><img src="!g/crisis.city.gif" alt="crisis.city"></a>
+			<a title="rice" href="https://rice.nekoweb.org/" target="_blank"><img src="https://rice.nekoweb.org/kamabokogonpachiro.gif"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
 
-		<p><a href="https://neustadt.fr/">neustadt.fr</a></p>
+		<p><a href="https://neustadt.fr/">neustadt.fr</a> / <a href="https://pux.nehukon.de" target="_blank">pux.nehukon.de</a></p>
 
 		<h4 id="art">art / music</h4>
 		<div class="neo">
