--- a/doqmeat/projects/index.html
+++ b/doqmeat/projects/index.html
@@ -23,10 +23,14 @@
 		<main>
 			<p>(　o=^•ェ•)o　┏━┓ here's some of my stuff that is one the interwebs</p>
 			<ul>
-				<li><a href="/">doqmeat.com</a> - my personal website! you are on it right now!</li>
-				<li><a href="https://siinamota.doqmeat.com/">siinamota.doqmeat.com</a> - a fansite made by me for composer and vocaloid producer <i>siinamota</i>!</li>
-				<li><a title="github repository" href="https://github.com/doqmeat/F2U-html-templates">HTML templates</a> - templates for HTML pages i've coded that are free to use. <small>i also have a <b>TON</b> of resources how to get started coding websites on my <a href="https://doqmeat.com/notebook/links#c" target="_blank">site's links</a>!</small>
-				</li>
+				<li><a href="/">doqmeat.com</a> - my personal website and playground. you are on it right now!</li>
+				<li><a href="https://siinamota.doqmeat.com/" target="_blank">siinamota.doqmeat.com</a> - a fansite for composer and vocaloid producer <i>siinamota</i>!</li>
+				<ul>
+					<li>
+						<a href="https://siinamota.doqmeat.com/fanlisting" target="_blank">i walk because i was born</a> - a siinamota fanlisting.
+					</li>
+				</ul>
+				<li><a href="/notebook/F2U/codes.html">HTML templates</a> - templates for HTML pages i've coded that are free to use. <small>i also have a <b>TON</b> of resources how to get started coding websites on my <a href="https://doqmeat.com/notebook/links#c" target="_blank">site's links</a>!</small></li>
 				<ul>
 					<li><b>notebook</b> - <a href="/notebook/F2U/preview/notebook" target="_blank">live preview</a> / <a href="https://github.com/doqmeat/F2U-html-templates/blob/main/notebook.html" target="_blank">github code</a> / <a href="https://codepen.io/doqmeat/pen/PoXjwPy" target="_blank">codepen code</a></li>
 				</ul>
