--- a/doqmeat/photobook/index.html
+++ b/doqmeat/photobook/index.html
@@ -42,6 +42,22 @@ hiii this is a caption
 -->
 		<!-- 1st column -->
 		<div class="column">
+
+			<div class="pic digi">
+				<img src="!g/240601-az%20(2).jpg">
+				<img src="!g/240601-az%20(4).jpg">
+				<img src="!g/240601-az%20(1).jpg">
+				<img src="!g/240601-az%20(3).jpg">
+				<img src="!g/240601-az%20(5).jpg">
+				<img src="!g/240601-az%20(6).jpg">
+				<img src="!g/240601-az%20(7).jpg">
+				<div class="hov">
+					<div class="caption">
+						went camping somewhere in AZ, very nice and chill. i love the little white flowers that was growing around the place. <br>found a bug buddy too! a friend told me it is a <i>"robberfly"</i>... first time i hear of them and see them.<br>my mom's dog <i>toby</i> cameo. he's ugly but also cute.<br><small>will post the scanned fujifilm pics at a later date!</small><br><b>taken on 01.jun.24</b>
+					</div>
+				</div>
+			</div>
+
 			<div class="pic digi"><img src="!g/240402-cat.jpg">
 				<div class="hov">
 					<div class="caption">
@@ -294,7 +310,7 @@ hiii this is a caption
 	<div id="home"><a title="go back to homepage" href="/"><img src="/!g/pix/polaroid_5.gif"></a></div>
 
 	<footer>
-		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 19.apr.24</b>
+		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 01.jun.24</b>
 		<br>
 		<b>credit:</b> bg by <a href="http://sozaioukoku.fc2web.com/index.html" target="_blank">sozaioukoku</a> / header font by <a href="https://www.dafont.com/growing-garden-script.font" target="_blank">helotype</a>
 		<br>
