--- a/doqmeat/photobook/index.html
+++ b/doqmeat/photobook/index.html
@@ -312,7 +312,7 @@ hiii this is a caption
 	<footer>
 		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 01.jun.24</b>
 		<br>
-		<b>credit:</b> bg by <a href="http://sozaioukoku.fc2web.com/index.html" target="_blank">sozaioukoku</a> / header font by <a href="https://www.dafont.com/growing-garden-script.font" target="_blank">helotype</a>
+		<b>credit:</b> bg by <a href="http://sozaioukoku.fc2web.com/index.html" target="_blank">sozaioukoku</a> / header font by <a href="https://www.dafont.com/growing-garden-script.font" target="_blank">helotype</a> / border-img from <a href="https://fujoshi.nekoweb.org" target="_blank">mimi</a>!
 		<br>
 		<a href="/">home</a> <img src="/!g/pix/cam.png" width="16px"> <a href="#">top</a> <img src="/!g/pix/cam.png" width="16px"> <a href="/sitemap.html">sitemap</a>
 	</footer>
