--- a/doqmeat/photobook/index.html
+++ b/doqmeat/photobook/index.html
@@ -136,7 +136,7 @@ hiii this is a caption
 			<div class="pic film"><img src="!g/210503-mizu-2.jpg">
 				<div class="hov">
 					<div class="caption">
-						instant film mizu :3
+						instant film <a title="mizu shrine!" href="/shrines/mizu/">mizu</a> :3
 					</div>
 				</div>
 			</div>
