--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -196,6 +196,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>01.jun.24: new pics in <a href="photobook/index.html">photobook</a></li>
 			<li>26.may.24: journal log: <a href="/journal">portable CD player</a></li>
 			<li>22.may.24: <a href="/vgs/fallout-new-vegas/index.html">new vegas</a> log</li>
 			<li>21.may.24: created <a title="I JUST FOUND OUT 123guestbook is closing" href="/guestbook">guestbook</a> page!</li>
