added some new pixels to toybox!

--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -220,7 +220,10 @@
 		<div class="header"><img src="!g/folder.png" class="folder"> toybox<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
-
+				<a href="https://spiders.neocities.org"><img src="!g/adopted/galaxycat.png"></a>
+				<a href="https://spiders.neocities.org"><img src="!g/adopted/teeacup.png"></a>
+				<a href="https://spiders.neocities.org"><img src="!g/adopted/bicat.png"></a>
+				<br>
 				<a href="https://hillhouse.neocities.org/shrines/halloween/treats" target="_blank"><img src="!g/adopted/hillhouse-house.gif"></a>
 				<a href="https://hillhouse.neocities.org/shrines/halloween/treats"><img src="/sites/!g/hillhouse-hallo.png"></a>
 				<br>
@@ -270,7 +273,7 @@
 				<a href="https://cinni.net/?z=/adopt" target="_blank"><img src="!g/adopted/grape-kitty.png"></a>
 				<br>
 
-				<a href="https://awhe.neocities.org" target="_blank"><img src="!g/adopted/enri.gif"><img src="!g/adopted/teddyclown.png"></a>
+				<a href="https://neetelite.neocities.org" target="_blank"><img src="!g/adopted/enri.gif"><img src="!g/adopted/teddyclown.png"></a>
 				<br>
 
 			</div>
@@ -294,7 +297,7 @@
 			<div class="wrapper-in padding list">
 				you can find me in other places like...
 				<a title="e-mail" href="mailto:doqmeat@gmail.com"><img src="/!g/pix/mail11a.gif" align="left" style="margin-right:15px;margin-top:5px;margin-left:10px;"></a>
-				<li><a href="https://github.com/doqmeat" target="_blank">github</a>
+				<li><a href="https://github.com/doqmeat" target="_blank">github</a></li>
 				<li><a href="https://rateyourmusic.com/~doqmeat" target="_blank">RYM</a></li>
 				<li><a href="https://letterboxd.com/Iakitu/" target="_blank">letterboxd</a></li>
 				<li><a href="https://www.last.fm/user/lakiitu" target="_blank">last.fm</a></li>
