--- a/doqmeat/collection/internet-graphics/index.html
+++ b/doqmeat/collection/internet-graphics/index.html
@@ -48,6 +48,7 @@
 			<a href="https://amriel.neocities.org"><img src="!g/mylesbianexperiencewloneliness.png"></a>
 			<a href="https://amriel.neocities.org"><img src="!g/pmmm1.png"></a>
 			<a href="https://www.deviantart.com/puniplush/art/Coffee-Cat-Stamp-614349985" target="_blank"><img src="!g/coffee%20cat.png"></a>
+			<img src="!g/ceilingcat.gif">
 			<img src="!g/jerm.gif">
 			<img src="!g/jermburg.gif">
 			<a href="https://sushi-pixels.neocities.org/"><img src="!g/saulstamp.gif"></a>
