--- a/doqmeat/notebook/links/index.html
+++ b/doqmeat/notebook/links/index.html
@@ -188,6 +188,7 @@
 		<li><a href="https://atabook.org/" target="_blank">atabook</a> - a 123guestbook replacement by dimden!</li>
 		<li><a href="https://github.com/22ru/microblog" target="_blank">22ru's microblog</a> - template. uses a XML file to update your microblogs!</li>
 		<li><a href="https://april.lexiqqq.com/neoblogtool/" target="_blank">neoblogtool</a> - a blogging tool with a tagging system and a WYSIWYG editor.</li>
+		<li><a href="https://melonking.net/melon?z=%2Ffree%2Fsoftware%2Fgallery-maker" target="_blank">melon's gallery maker</a> - micro static site generator that let's you share pics into your website easily!</li>
 
 		<hr>
 
@@ -211,6 +212,7 @@
 		<li><a href="https://pastebin.com/N4uKpWLs" target="_blank">CRT TV effect</a></li>
 		<li><a href="https://stackoverflow.com/questions/16354122/how-to-put-scrolling-text-in-title-tag" target="_blank">scrolling title tag</a></li>
 		<li><a href="https://atomiks.github.io/tippyjs/" target="_blank">tippy.js</a> - another JS tooltip!</li>
+		<li><a href="https://melonking.net/melon?z=%2Ffree%2Fsoftware%2F" target="_blank">site closer script</a> by melonking</li>
 
 		<hr>
 
