--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -184,6 +184,7 @@
 			<a title=" vulpix" href="https://ocha.cafe" target="_blank"><img src="!g/ocha.cafe.png" alt="ocha.cafe"></a>
 			<a title="alpawca" href="https://alpawca.neocities.org" target="_blank"><img src="!g/alpawca.gif" alt="alpawca"></a>
 			<a title="neet" href="https://fujoshi.nekoweb.org" target="_blank"><img src="!g/neetretreat.png" alt="neet retreat"></a>
+			<a title="galissia" href="https://galissa.neocities.org" target="_blank"><img src="!g/galissia.gif" alt="galissia"></a>
 		</div>
 
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
