--- a/doqmeat/notebook/links/index.html
+++ b/doqmeat/notebook/links/index.html
@@ -339,6 +339,7 @@
 		<h3 id="games">games</h3>
 		<li><a href="https://melonds.kuribo64.net/" target="_blank">melon DS</a> - DS emulator</li>
 		<li><a href="https://dukope.itch.io/lcd-please" target="_blank">LCD, Please</a> - papers, please demake made by the same dev!</li>
+		<li><a href="https://3ds.hacks.guide" target="_blank">3ds.hacks.guide</a> and <a href="https://wiki.hacks.guide/wiki/3DS:Things_to_do" target="_blank">things you can do with it!</a></li>
 
 		<h3 id="articles">articles</h3>
 		<li><a href="https://yesterweb.org/no-to-web3/" target="_blank">say no to web3</a></li>
