--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -183,17 +183,18 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> <a href="/vgs/fallout-new-vegas/index.html">fallout: new vegas</a>, <a href="/vgs/paranormasight">paranormasight</a></p>
-			<p><span class="hl">reading:</span> <i>the guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki fujimoto</p>
+			<p><span class="hl">playing:</span> style savvy: trendsetter, <a href="/vgs/fallout-new-vegas/index.html">fallout: new vegas</a>, <a href="/vgs/paranormasight">paranormasight</a></p>
+			<p><span class="hl">reading:</span> <i>shimanami tasogare</i> by yuhki kamatani. <i>chainsaw man</i> by tatsuki fujimoto</p>
 			<p><span class="hl">watching:</span> dungeon meshi</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> building a <a href="https://siinamota.doqmeat.com/fanlisting" target="_blank">siinamota fanlisting</a> and fansite!</p>
-			<p><span class="hl">coding/writing:</span> nothing atm</p>
-			<p class="date">last updated on 31.may.24</p>
+			<p><span class="hl">working on:</span> building a <a href="https://siinamota.doqmeat.com/fanlisting" target="_blank">siinamota fanlisting</a></p>
+			<p><span class="hl">coding/writing:</span> journal post</p>
+			<p class="date">last updated on 03.jun.24</p>
 		</div>
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>03.jun.24: scrapbook: <a href="/scrapbook/2024/index.html#jun">june</a></li>
 			<li>01.jun.24: new pics in <a href="photobook/index.html">photobook</a></li>
 			<li>26.may.24: journal log: <a href="/journal">portable CD player</a></li>
 			<li>22.may.24: <a href="/vgs/fallout-new-vegas/index.html">new vegas</a> log</li>
