june scrapbook + minor tweaks to CSS

--- a/doqmeat/scrapbook/index.html
+++ b/doqmeat/scrapbook/index.html
@@ -16,23 +16,22 @@
 
 <body>
 	<div class="page">
-		<h1>des' scrapbook</h1>
+		<h1 style="text-shadow:none">des' scrapbook</h1>
 
 		<img src="/!g/deco/polaroid-pics.gif" align="right" alt="">
 
-		<p>inspired by <a href="https://bisuko.neocities.org/scrapbooks/2023" target="_blank">bisuko</a> and <a href="https://strawberry-gashes.neocities.org/sb23" target="_blank">strawberry-gashes</a>!</p>
-
-		<p>these will be pages dedicated to how my year is going, media consumed, etc. i will be updating it throughout the year frequently!</p>
+		<p>pages dedicated to my life throughout the year updated on a monthly basis!</p>
 
 		<ul>
 			<li><a href="2024/index.html">2024</a></li>
 		</ul>
-		<center><img src="/!g/div/heart-string.gif" alt="divider"></center>
 	</div>
 
 	<div id="home"><a title="go back to homepage" href="/"><img src="/!g/deco/paper-planes.gif" alt="link to homepage"></a></div>
-
+		<center><img src="/!g/div/heart-string.gif" alt="divider"></center>
 	<footer>
+		inspired by <a href="https://bisuko.neocities.org/scrapbooks/2023" target="_blank">bisuko</a> and <a href="https://strawberry-gashes.neocities.org/sb23" target="_blank">strawberry-gashes</a>!
+		<br>
 		<b>credit:</b> <a href="/notebook/links/fonts.html">fonts</a> used: garden, newpenji, gaegu
 		<br>
 		<a href="#">top</a> / <a href="/">home</a> / <a href="/sitemap">sitemap</a>
