--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -194,6 +194,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>04.jun.24: journal log: <a href="/journal">visiting AZ + 3DS</a></li>
 			<li>03.jun.24: scrapbook: <a href="/scrapbook/2024/index.html#jun">june</a></li>
 			<li>01.jun.24: new pics in <a href="photobook/index.html">photobook</a></li>
 			<li>26.may.24: journal log: <a href="/journal">portable CD player</a></li>
