--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -36,6 +36,7 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 			<p>on this little notepad i write about my life, site stuff, and any other misc things.</p>
 			<details open>
 				<summary>2024</summary>
+				<a href="2024/06.html" target="oframe_a">june</a>
 				<a href="2024/05.html" target="iframe_a">may</a>
 				<a href="2024/04.html" target="iframe_a">april</a>
 				<a href="2024/03.html" target="iframe_a">march</a>
