--- a/doqmeat/shrines/mizu/index.html
+++ b/doqmeat/shrines/mizu/index.html
@@ -235,6 +235,7 @@ palette: https://coolors.co/ffb1c9-ffddea-ffe8b0-ffffb3-c8f7b0-b0edf9-f2d8fd
 			<div class="container">
 				<!--			column 1-->
 				<div class="column">
+					<img src="!g/240601%20(1).jpg">
 					<img title="on top of my mom's laptop" src="!g/mizu-on-laptop.jpg">
 					<img title="chillin on my desk" src="!g/onmydesk.jpg">
 					<img title="bro thinks hes a lion lol" src="!g/cubbie.jpg">
@@ -244,6 +245,7 @@ palette: https://coolors.co/ffb1c9-ffddea-ffe8b0-ffffb3-c8f7b0-b0edf9-f2d8fd
 				</div>
 				<!--				column 2-->
 				<div class="column">
+					<img title="SO HANDSOMEEE" src="!g/240603.jpg">
 					<img title="do it for him!" src="!g/doitforhim.jpg">
 					<img title="loafin' around" src="!g/meow1.jpg">
 					<img title="instant camera mizu" src="!g/meow3.jpg">
