--- a/doqmeat/notebook/sitely/graphics.html
+++ b/doqmeat/notebook/sitely/graphics.html
@@ -320,6 +320,13 @@
 		<a href="http://sozaiya405.chu.jp/" target="_blank"><img src="/!g/pix/flashing-star-sozaiya.gif"></a>
 		<a href="http://sozaiya405.chu.jp/" target="_blank"><img src="/!g/pix/mail-sozaiya.gif"></a>
 		<a href="https://pomelo.lol" target="_blank"><img src="/!g/pix/pomelo-smile.png"></a>
+		<img src="/!g/pix/flower-tiny%20(1).gif">
+		<img src="/!g/pix/flower-tiny%20(2).gif">
+		<img src="/!g/pix/flower-tiny%20(3).gif">
+		<img src="/!g/pix/star-plant.gif">
+		<img src="/!g/pix/star-sparkle.gif">
+		<img src="/!g/pix/tiny-plant.gif">
+
 
 
 
@@ -370,6 +377,8 @@
 		<img src="/!g/deco/hk-p.gif">
 		<a href="http://tora7.ciao.jp/" target="_blank"><img src="/!g/pix/tora-cat-holdingsunflower.gif"></a>
 		<a href="http://tora7.ciao.jp/" target="_blank"><img src="/!g/pix/tora-cat-holdingflower.gif"></a>
+		<img src="/!g/pix/plant-jar.png">
+		<img src="/!g/pix/space.png">
 
 		<!-- sozaiya405 bears -->
 		<br>
@@ -422,6 +431,8 @@
 		<img src="/!g/div/yellowdiv.gif">
 		<a href="http://kawaiiness.net/dividers.php" target="_blank"><img src="/!g/div/heart-div.png"></a>
 		<img src="/!g/div/cat.gif">
+		<img src="/!g/div/cats.png">
+		<img src="/!g/div/gay-cats.gif">
 		<img src="/!g/div/plantdoodle.gif">
 		<img src="/!g/div/animals.gif">
 		<img src="/!g/div/birth.gif">
@@ -692,7 +703,11 @@
 		<img src="/!g/deco/bench-flowers.gif">
 		<img src="/!g/deco/flowers.gif">
 		<img src="/!g/deco/flower%20108.gif">
+		<img src="/!g/deco/plant-hanger.gif">
+		<img src="/!g/deco/plant-hanger2.gif">
 		<img src="/!g/deco/windmill.gif">
+		<a title="pixelins" href="https://pixelins.tumblr.com" target="_blank"><img src="/!g/deco/pixelings-lily.png"></a>
+		<a title="pixelins" href="https://pixelins.tumblr.com" target="_blank"><img src="/!g/deco/pixelings-mush.png"></a>
 
 
 		<h4>trees</h4>
