minor update: about
added gemini graphic

--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -220,6 +220,7 @@
 		<div class="header"><img src="!g/folder.png" class="folder"> toybox<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
+				<img title="idk where this one is from but if anyone knows, let me know!" src="/!g/deco/gemini.gif">
 				<a href="https://spiders.neocities.org"><img src="!g/adopted/galaxycat.png"></a>
 				<a href="https://spiders.neocities.org"><img src="!g/adopted/teeacup.png"></a>
 				<a href="https://spiders.neocities.org"><img src="!g/adopted/bicat.png"></a>
