added doodle to art

--- a/doqmeat/art/index.html
+++ b/doqmeat/art/index.html
@@ -23,22 +23,22 @@ coded with love by des
 
 <body>
 	<h1>arts &amp; crafts</h1>
-	<p>this happens once every year or something but i do a little drawing and other stuff.</p>
+	<p>this happens once every year or something but i do a little drawing and other stuff. <small>one day i will have a layout for this page.</small></p>
 
 	<h2>posts</h2>
 	<p><a href="post/depression-cherry-booklet.html">depression cherry custom booklet</a></p>
 
 	<h2>arts</h2>
+	<img src="!g/drawings/240520-casio.jpg" class="full">
 	<img src="!g/drawings/halo2.jpg" class="full">
 	<img src="!g/drawings/halotransp.png" class="half">
 	<img src="!g/drawings/sepiarecord.jpg" class="half">
 	<img src="!g/drawings/oyasumi.jpg" class="half">
-	<img src="!g/drawings/thelittleprincejrn.jpg" class="half">
+	<img src="!g/drawings/thelittleprincejrn.jpg" class="full">
 	<img src="!g/drawings/pahwah.png" class="half">
 	<img src="!g/drawings/panocto2.png" class="half">
-	<img src="!g/drawings/pan4.jpg" class="half">
-	<img src="!g/drawings/hyperlightdrifter6thanni.jpg" class="half">
-	<img src="!g/drawings/fastfoodworkerhellokitty1.jpg" class="half">
+	<img src="!g/drawings/pan4.jpg" class="half"> <img src="!g/drawings/fastfoodworkerhellokitty1.jpg" class="half">
+	<img src="!g/drawings/hyperlightdrifter6thanni.jpg" class="full">
 
 	<h2>crafts</h2>
 	<img src="!g/collage/loona.jpg" class="full">
