--- a/doqmeat/notebook/links/index.html
+++ b/doqmeat/notebook/links/index.html
@@ -337,9 +337,11 @@
 		<li><a href="https://lel.nekoweb.org/lastfm/" target="_blank">neko.fm</a></li>
 
 		<h3 id="games">games</h3>
+		<li><a href="https://www.reddit.com/r/Roms/" target="_blank">roms subreddit</a></li>
 		<li><a href="https://melonds.kuribo64.net/" target="_blank">melon DS</a> - DS emulator</li>
 		<li><a href="https://dukope.itch.io/lcd-please" target="_blank">LCD, Please</a> - papers, please demake made by the same dev!</li>
-		<li><a href="https://3ds.hacks.guide" target="_blank">3ds.hacks.guide</a> and <a href="https://wiki.hacks.guide/wiki/3DS:Things_to_do" target="_blank">things you can do with it!</a></li>
+		<li><a href="https://3ds.hacks.guide" target="_blank">3ds.hacks.guide</a> / <a href="https://wiki.hacks.guide/wiki/3DS:Things_to_do" target="_blank">things to do</a> / <a href="https://wiki.ds-homebrew.com/ds-index/forwarders?tab=3ds-sd-card" target="_blank">DS game forwarder</a></li>
+		<li><a href="https://wiiu.hacks.guide/#/" target="_blank">wiiu.hacks.guide</a> / <a href="https://wiki.agilly1989.xyz/books/wiiu" target="_blank">another guide</a> / <a href="https://wii.hacks.guide/vwii-homebrew-channel" target="_blank">vwii modding</a></li>
 
 		<h3 id="articles">articles</h3>
 		<li><a href="https://yesterweb.org/no-to-web3/" target="_blank">say no to web3</a></li>
