--- a/doqmeat/vgs/index.html
+++ b/doqmeat/vgs/index.html
@@ -114,7 +114,7 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 			<a title="cloud gardens" href="cloud-gardens/index.html" target="iframe_a"><img src="cloud-gardens/cover.jpg" class="vgimg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv currently notdone single adventure">
-			<a title="the dog island (ps2)" href="dog-island/index.html" target="iframe_a"><img src="dog-island.jpg" class="vgimg" tabindex="0"></a>
+			<a title="the dog island" href="dog-island/index.html" target="iframe_a"><img src="dog-island.jpg" class="vgimg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv finished fav single rpg action">
 			<a title="fallout" href="fallout-1/index.html" target="iframe_a"><img class="vgimg" src="fallout-1/cover.jpg" alt="fallout" tabindex="0"></a>
@@ -125,7 +125,7 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv finished rpg single">
 			<a title="dragon age inquisition" href="dai/index.html" target="iframe_a"><img src="dragonageinquisition.jpg" class="vgimg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv finished currently sim single">
+		<div class="filterDiv finished sim single">
 			<a title="fashion dreamer" href="fashion-dreamer/index.html" target="iframe_a"><img src="fashion-dreamer.jpg" class="vgimg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv fav action finished single">
@@ -196,6 +196,9 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		</div>
 		<div class="filterDiv cat fav finished single adv">
 			<a title="stray" href="stray/index.html" target="iframe_a"><img src="stray.jpg" class="vgimg" tabindex="0"></a>
+		</div>
+		<div class="filterDiv notdone single sim currently">
+			<a title="style savvy: trendsetters" href="style-savvy-trendsetters/index.html" target="iframe_a"><img src="style-savvy-trendsetters/cover.JPG" class="vgimg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv finished single puzzle">
 			<a title="unpacking" href="unpacking/index.html" target="iframe_a"><img src="unpacking.jpg" class="vgimg" tabindex="0"></a>
