--- a/doqmeat/photobook/index.html
+++ b/doqmeat/photobook/index.html
@@ -8,7 +8,7 @@ coded with love by des
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>photobook</title>
-	<link rel="icon" type="image/x-icon" href="/!g/pix/camera.gif">
+	<link rel="icon" type="image/x-icon" href="/!g/pix/takepic.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="index.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
@@ -24,8 +24,13 @@ coded with love by des
 	<header>
 		<h1>doqmeat's photobook</h1>
 		<p>my <b>instant film</b> pics are taken with a fujifilm instax mini 26. i've had it since 2018, works like a charm! both the camera and film it uses are pretty affordable. i love the pics you can get with it so i highly recommend it if you're looking for something to have some fun with!</p>
-		<p><b>digital</b> pics are from my shitty android phone *crying* wanna save for a nice digital camera someday!
-		</p>
+		<p><b>digital</b> pics are from my shitty android phone *crying* wanna save for a nice digital camera someday! and i also take pics with my <b>3DS</b> cus it's fun :3</p>
+		<details>
+			<summary>border legend</summary>
+			<p class="film" style="border-bottom-width: 30px;background:#A98379;padding:3px">instant film</p>
+			<p class="digi">phone pics</p>
+			<p class="ds">3DS</p>
+		</details>
 		<div id="p1"><img src="/!g/deco/instant-pic.gif"></div>
 
 		<div id="p3"><img src="/!g/deco/cam-instant.gif"></div>
@@ -123,6 +128,22 @@ hiii this is a caption
 		<!-- 2nd column -->
 		<div class="column">
 
+			<div class="pic digi">
+				<img src="!g/240605-rose-garden%20(1).jpg">
+				<img src="!g/240605-rose-garden%20(2).jpg">
+				<img src="!g/240605-rose-garden%20(3).jpg">
+				<img src="!g/240605-rose-garden%20(4).jpg">
+				<img src="!g/240605-rose-garden%20(5).jpg">
+				<img src="!g/240605-rose-garden%20(6).jpg">
+				<img src="!g/240605-rose-garden%20(7).jpg">
+				<img src="!g/240605-rose-garden%20(8).jpg">
+				<div class="hov">
+					<div class="caption">
+						visited a rose garden before they died during the summer! it smelled so lovely. i felt like the little prince <br> <b>taken on: 05.jun.24</b>
+					</div>
+				</div>
+			</div>
+
 			<div class="pic digi"><img src="!g/240120-cat-shrine%20(2).jpg" alt="cat shrine"><img src="!g/240120-cat-shrine%20(1).jpg" alt="cat shrine">
 				<div class="hov">
 					<div class="caption">
@@ -178,6 +199,19 @@ hiii this is a caption
 		<!-- 3rd column -->
 
 		<div class="column">
+
+			<div class="pic ds">
+				<img src="!g/240605-flower-garden-3ds%20(1).JPG">
+				<img src="!g/240605-flower-garden-3ds%20(2).JPG">
+				<img src="!g/240605-flower-garden-3ds%20(3).JPG">
+				<img src="!g/240605-flower-garden-3ds%20(4).JPG">
+				<img src="!g/240605-flower-garden-3ds%20(5).JPG">
+				<div class="hov">
+					<div class="caption">
+						my phone started overheating at the rose garden so i started taking pics with my 3DS LOL... i do like how they turned out tbh. the 3D effect also turned out pretty good too!<br> <b>taken on 05.jun.24</b>
+					</div>
+				</div>
+			</div>
 
 			<div class="pic digi"><img src="!g/240322-pond.jpg">
 				<div class="hov">
@@ -310,7 +344,7 @@ hiii this is a caption
 	<div id="home"><a title="go back to homepage" href="/"><img src="/!g/pix/polaroid_5.gif"></a></div>
 
 	<footer>
-		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 01.jun.24</b>
+		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 05.jun.24</b>
 		<br>
 		<b>credit:</b> bg by <a href="http://sozaioukoku.fc2web.com/index.html" target="_blank">sozaioukoku</a> / header font by <a href="https://www.dafont.com/growing-garden-script.font" target="_blank">helotype</a> / border-img from <a href="https://fujoshi.nekoweb.org" target="_blank">mimi</a>!
 		<br>
