--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -185,6 +185,8 @@
 			<a title="alpawca" href="https://alpawca.neocities.org" target="_blank"><img src="!g/alpawca.gif" alt="alpawca"></a>
 			<a title="neet" href="https://fujoshi.nekoweb.org" target="_blank"><img src="!g/neetretreat.png" alt="neet retreat"></a>
 			<a title="galissia" href="https://galissa.neocities.org" target="_blank"><img src="!g/galissia.gif" alt="galissia"></a>
+			<a title="cherie / niki" href="https://cherie.nekoweb.org" target="_blank"><img src="!g/cherie.gif" alt="cherie"></a>
+			<a title="angel city" href="https://ginder.neocities.org" target="_blank"><img src="!g/ginder.png" alt="ginder"></a>
 		</div>
 
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
