--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -197,7 +197,7 @@
 			<a title="one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/">2cherrish</a> /
 			<a href="https://yaebee.neocities.org/" target="_blank">yaebee</a> /
 			<a href="https://cyclopamine.neocities.org/" target="_blank">cyclopamine</a> /
-			<a href="https://maphren.neocities.org/" target="_blank">maphren</a>
+			<a href="https://maphren.neocities.org/" target="_blank">maphren</a> / <a href="https://innkeeper.neocities.org" target="_blank">innkeeper</a>
 		</p>
 
 		<h3><img src="/!g/pix/icon_k_clover1.gif"> other cool sites</h3>
